fixup! Play: changed layout, added custom theme, fixed automatch header for lower resolutions by adding flex-wrap

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -193,7 +193,7 @@
 #play-bottom-container {
     themed background-color container-background-color;
     themed border container-border;
-    themed border-color border-coloround-color;
+    themed border-color container-border-color;
     themed box-shadow container-box-shadow;
 
     margin-top: 2rem;
